# SearchEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
conf/: config.json  data.json  jieba.json  keyword.json  simhash.json  webpage.json
sources/personal/doc/: 优化历程.md
sources/personal/offline/keyword/: Interface.md
src/: CMakeLists.txt
src/offline/: CMakeLists.txt
src/offline/keyword/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  DictionaryChinese.cpp  DictionaryChinese.h  DictionaryEnglish.cpp  DictionaryEnglish.h  DictionaryIndex.cpp  DictionaryIndex.h  DictionaryProducer.cpp  DictionaryProducer.h  InvertIndex.cpp  InvertIndex.h  JiebaSplitCn.cpp  JiebaSplitCn.h  KeyWordProducer.cpp  KeyWordProducer.h  SplitChinese.cpp  SplitChinese.h  SplitEnglish.cpp  SplitEnglish.h  SplitTool.cpp  SplitTool.h  main.cpp
src/offline/webpage/: CMakeLists.txt  SimHashWebPage.cpp  SimHashWebPage.h  WebPage.cpp  WebPage.h  WebPageInvert.cpp  WebPageInvert.h  WebPageOffset.cpp  WebPageOffset.h  WebPageProducer.cpp  WebPageProducer.h  WebPageRemove.cpp  WebPageRemove.h  WordWeight.cpp  WordWeight.h  main.cpp
src/online/: CMakeLists.txt
src/online/client/: CMakeLists.txt  main.cpp
src/online/exclusivelru/: CMakeLists.txt  CandidatePage.h  CandidateWord.cpp  CandidateWord.h  KeyWordServer.cpp  KeyWordServer.h  LRU.cpp  LRU.h  TcpServer.cpp  TcpServer.h  WebPageServer.cpp  WebPageServer.h  main.cpp
src/online/rediscanche/: CMakeLists.txt  CandidatePage.cpp  CosineAlgorithm.h  KeyWordServer.cpp  KeyWordServer.h  TcpServer.h  WebPageServer.cpp  WebPageServer.h  main.cpp
src/online/server/: CMakeLists.txt  CandidatePage.cpp  CandidatePage.h  CandidateWord.cpp  CosineAlgorithm.cpp  EditDistance.cpp  EditDistance.h  KeyWordServer.cpp  KeyWordServer.h  TcpServer.cpp  TcpServer.h  WebPageServer.cpp  WebPageServer.h  main.cpp
src/online/singlelru/: CMakeLists.txt  CandidateWord.cpp  CosineAlgorithm.cpp  KeyWordServer.cpp  KeyWordServer.h  LRU.cpp  LRU.h  TcpServer.cpp  TcpServer.h  WebPageServer.cpp  WebPageServer.h  main.cpp
test/: CMakeLists.txt
test/CandidatePageTest/: CMakeLists.txt  CandidatePageTest.cpp
test/CandidateWordTest/: CMakeLists.txt  CandidateWordTest.cpp
test/CosineAlgorithmTest/: CMakeLists.txt  CosineAlgorithmTest.cpp
test/DictionaryPerf/: CMakeLists.txt  DictionaryPerf.cpp
test/EditDistanceTest/: CMakeLists.txt  EditDistanceTest.cpp
test/SplitChineseTest/: CMakeLists.txt  SplitChineseTest.cpp
test/SplitEnglishTest/: CMakeLists.txt  SplitEnglishTest.cpp
utils/: noncopyable.h  public.h
utils/base/: Configure.cpp  Configure.h  EditDistance.h  HvProtocol.cpp  HvProtocol.h  Log.h  SingleWord.cpp  SingleWord.h  Singleton.h  WordWeight.h
utils/splitword/: JiebaSplitCn.cpp  JiebaSplitCn.h  SplitChinese.cpp  SplitChinese.h  SplitEnglish.cpp  SplitEnglish.h  SplitTool.h
